# poc-intelligent-document-search

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  env.prod.example  postman_collection.json  pyproject.toml  redis.conf  requirements.txt  results.txt  worker.py
.cursor/rules/: project_context.mdc
alembic/: env.py
alembic/versions/: 1acc2f7e09b0_add_file_upload_and_document_processing_.py  39945b27c364_add_user_authentication_fields.py  e8a595f27b49_adr003_token_control_and_i18n_.py  f26167aa9196_initial_postgresql_schema_with_pgvector.py
api/: main.py
api/core/: config.py  redis.py
api/models/: chat.py  session.py
api/routers/: chat.py  documents.py  sessions.py
api/services/: llm_service.py  rag_service.py  session_service.py
application/dto/: auth_dto.py  chat_dto.py  document_dto.py  token_dto.py
application/interfaces/: llm_service.py
application/use_cases/: authentication_use_case.py  chat_with_documents.py  create_presigned_upload.py  get_document_status.py  process_uploaded_document.py  token_management_use_cases.py  user_management_use_case.py
docs/: adr-001-redis-queue-impact.md  adr-001.md  adr-002.md  adr-003-token-control-monthly.md  adr-004-user-authentication-system.md  adr-005-email-system-improvements.md  adr-006-complete-api-endpoints.md  email-setup-guide.md  flexible-user-activation-guide.md  frontend-complete-api-reference.md  google-oauth2-setup.md  infrastructure-deployment-guide.md  redis-queue-implementation-summary.md  redis-queue-usage.md  s3-upload-flow.md
domain/entities/: chat_session.py  document.py  document_processing_job.py  file_upload.py  message.py  municipality.py  prefeitura.py  token_usage_period.py  user.py  usuario.py
domain/exceptions/: auth_exceptions.py  business_exceptions.py  chat_exceptions.py  document_exceptions.py  token_exceptions.py
domain/repositories/: document_processing_job_repository.py  document_repository.py  file_upload_repository.py  municipality_repository.py  prefeitura_repository.py  session_repository.py  token_usage_period_repository.py  user_repository.py  usuario_repository.py  vector_repository.py
domain/services/: authentication_service.py  chat_service.py  document_processor.py  document_service.py  email_rate_limiter.py  email_service.py  rate_limit_service.py  search_service.py  threshold_service.py  token_limit_service.py
domain/value_objects/: auth_provider.py  content_hash.py  document_metadata.py  embedding.py  municipality_id.py  prefeitura_id.py  processing_status.py  s3_key.py  user_id.py  user_role.py  usuario_id.py
infrastructure/config/: database_settings.py  settings.py
infrastructure/database/: connection.py  models.py
infrastructure/processors/: context_generator.py  text_chunker.py
infrastructure/queue/: __init__.py  jobs.py  redis_queue.py
infrastructure/repositories/: chroma_vector_repository.py  memory_document_repository.py  postgres_document_processing_job_repository.py  postgres_document_repository.py  postgres_file_upload_repository.py  postgres_municipality_repository.py  postgres_prefeitura_repository.py  postgres_session_repository.py  postgres_token_usage_period_repository.py  postgres_user_repository.py  postgres_usuario_repository.py  postgres_vector_repository.py  redis_session_repository.py
infrastructure/services/: token_lock_service.py
interface/: main.py
interface/api/v1/: router.py
interface/api/v1/endpoints/: admin.py  auth.py  chat.py  documents.py  queue.py  (+2 more)
interface/dependencies/: container.py
interface/middleware/: auth_middleware.py  token_limit_middleware.py
interface/schemas/: activation_schemas.py  auth_schemas.py  chat.py  documents.py  token_schemas.py  user_schemas.py
interface/static/: activate-account.html  oauth2-test.html
scripts/: backup.sh  build.sh  cleanup_scheduler.py  deploy.sh  health-check.sh  ingest_documents.py  setup_db.sql  setup_localstack_boto3.py  test_email_system.py  test_real_documents.py
src/: chunker.py  embedder.py  ingest.py  query.py
storage/vector_db/: chroma.sqlite3
tests/: conftest.py
tests/helpers/: mock_factories.py
tests/integration/: test_auth_integration.py
tests/integration/api/: test_flexible_user_activation.py
tests/unit/infrastructure/: conftest.py
tests/unit/interface/: test_main.py
(+37 files in other folders)
